Updated with basic example